# network

./: .gitignore
acceptor/: .cproject  .project  CMakeLists.txt  Makefile
acceptor/include/nw/: Acceptor.hpp  Codec.cpp  Codec.h  CodecFactory.h  FilterNode.hpp  LogFilter.h  SessionContext.hpp
acceptor/src/: CodecFactory.cpp  LogFilter.cpp  main.cpp
any-test/: .cproject  .project  Makefile
any-test/src/: main.cpp
battery/: .cproject  .project  Makefile
battery-tests/: .cproject  .project  AnalogInputs.json  Makefile
battery-tests/include/: MockSession.h
battery-tests/src/: AnalogInputsLoadTest.cpp  AnalogInputsSaveTest.cpp  CommandEncodeTest.cpp  MockSession.cpp
battery/docs/: notes.md
battery/include/: BatteryAI.hpp  Codec.h  Command.h  Decoder.h
battery/src/: Codec.cpp  Command.cpp  Decoder.cpp  main.cpp
bind-test/: .cproject  .project  Makefile  bind-test
bind-test/src/: .main.cpp.swp  main.cpp
boost-unit-test/: .cproject  .project  Makefile
boost-unit-test/src/: example.cpp  main.cpp
call-codec/: .cproject  .project  Makefile
call-codec-test/: .cproject  .project  Makefile
call-codec-test/include/: MyMessage.h  MyMessageHandler.h  Utils.h
call-codec-test/src/: CallProtocolTest.cpp  MyMessage.cpp  MyMessageHandler.cpp  SetVersionTest.cpp
call-codec/include/: CallProtocol.h  MessageCodec.h  MessageHandler.h
call-codec/src/: CallProtocol.cpp  MessageCodec.cpp  MessageHandler.cpp  main.cpp
codec/: .cproject  .project  Makefile  codec  codec.hex
codec-test/: .cproject  .project  Makefile
codec-test/include/: MockHandler.h  MockSession.h  MockSession.ipp  MockTrivialCodec.h
codec-test/src/: CodecableTest.cpp  InitializerTest.cpp  MockHandler.cpp  MockSession.cpp  MockSession2.cpp  MockTrivialCodec.cpp  ObserverTest.cpp  PipelineTest.cpp  SessionTest.cpp  TestDataElement.cpp  ValidatorTest.cpp  main.cpp
codec/include/: Codec.h  Codecable.hpp  byte_stream.hpp  completion_handler.hpp  down_stream.hpp  upper_stream.hpp
codec/src/: .Codec.cpp.swp  Codec.cpp  main.cpp
common/: Makefile-Cross-Linux.Linux-mips  Makefile.Darwin-x86_64  Makefile.Linux-armv7l  Makefile.Linux-mips  Makefile.Linux-unknown  Makefile.Linux-x86  Makefile.Linux-x86_64  Makefile.def  Makefile.in  Makefile.win32
constructor/: Makefile
constructor/src/: main.cpp
data-objects/: .cproject  .project  Makefile
data-objects-tests/: .cproject  .project  Makefile
data-objects-tests/src/: SignalStateTest.cpp
data-objects/docs/: protocol.txt  readme.txt
data-objects/include/: SignalState.cpp  SignalState.h
data-objects/src/: SignalState.cpp  main.cpp
dc2800-codec/: .cproject  .project  Makefile
dc2800-codec-test/: .cproject  .project  Makefile
dc2800-codec-test/src/: AnalogInputsSaveTest.cpp  main.cpp  (+2 more)
endian-test/: .cproject  .project  Makefile
epoll/: .autotools  .cproject  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  libtool
epoll/libepoll/: Makefile  Makefile.am  Makefile.in  libepoll.c
epoll/libepoll/.deps/: libepoll_la-libepoll.Plo
fork-test/: .cproject  .project  Makefile
ipmid/: Makefile.am  Makefile.in  configure  configure.ac
ipmid/event_queue/: Makefile.am  Makefile.in
ipmid/event_queue/src/: main.c
ipmid/include/: Makefile.am
ipmid/include/ipmid/: config.h.in
ipmid/ipmid/: Makefile.am  Makefile.in
ipmid/pkginfo/: Makefile.in
ipmid/pkginfo/src/: main.c
java-nio/: pom.xml
linux-network/: getaddrinfo.c
loopback-client/: .cproject  .project  Makefile  loopback-client.hex
protobuf-test/: .cproject  .project  Makefile
protocol/: .autotools  Makefile.in  NEWS  README  configure.ac
rcf-echo/: CMakeLists.txt
rcf-echo/echo_client/: CMakeLists.txt
rcf-echo/echo_server/: CMakeLists.txt
rcf-echo/src/: echo_client.cpp  echo_server.cpp  echo_service.hpp
serialization-test/: .cproject  .project  Makefile
signal-dir/: .cproject  .project  Makefile
state-server/: .cproject  .project  Makefile
strand-test/: .project  Makefile
streambuf-test/: .cproject  .project  Makefile
struct-repr/: .cproject  .project  Makefile
struct-string/: Makefile
template-func/: .cproject  .project  Makefile
(+99 files in other folders)
