AC_INIT([ipmid], [1.0], [xtwxy@hotmail.com], [ipmid], [https://github.com/xtwxy])
LT_PREREQ([2.4.6])
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
    Makefile
    event_queue/Makefile
    ipmid/Makefile
    pkginfo/Makefile
])
AC_OUTPUT

