AUTOMAKE_OPTIONS = subdir-objects

pkglib_LTLIBRARIES=event_queue.la
event_queue_la_LDFLAGS=-module -avoid-version -shared
#event_queue_la_LIBADD=

event_queue_la_SOURCES=src/main.c

#pkglib_LTLIBRARIES = scan_bulk.la
#scan_bulk_la_LDFLAGS = -module -avoid-version -shared
#scan_bulk_la_SOURCES=src/main.c